// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleAddOrderRequest 1`] = `
Object {
  "ZRX-WETH": Array [
    Object {
      "liveOrder": Object {
        "test": "liveOrder",
      },
      "method": "add",
      "orderHash": "0xOrderHash",
      "pair": "ZRX-WETH",
      "signedOrder": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "ws": Object {},
    },
  ],
}
`;

exports[`handleAddOrderRequest 2`] = `
Array [
  Array [
    Object {},
    Object {
      "test": "liveOrder",
    },
    "add",
    "pending",
    "user",
  ],
]
`;

exports[`handleAddOrderRequest invalid order 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xOrderHash",
      "pair": "ZRX-WETH",
    },
  ],
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xInvalidHash",
      "pair": "ZRX-WETH",
    },
  ],
]
`;

exports[`handleCancelOrderRequest 1`] = `
Object {
  "ZRX-WETH": Array [
    Object {
      "liveOrder": Object {
        "test": "liveOrder",
      },
      "method": "cancel",
      "orderHash": "0xOrderHash",
      "pair": "ZRX-WETH",
      "ws": Object {},
    },
  ],
}
`;

exports[`handleCancelOrderRequest 2`] = `
Array [
  Array [
    Object {},
    Object {
      "test": "liveOrder",
    },
    "cancel",
    "pending",
    "user",
  ],
]
`;

exports[`handleCancelOrderRequest invalid order 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "orderHash": "0xOrderHash",
      "pair": "ZRX-WETH",
    },
  ],
]
`;

exports[`handleInvalidOrderRequest 1`] = `
Array [
  Array [
    "{\\"method\\":\\"add\\",\\"channel\\":\\"orders\\",\\"status\\":\\"invalid order\\",\\"pair\\":\\"ZRX-WETH\\",\\"orderHash\\":\\"0xOrderHash\\"}",
  ],
]
`;

exports[`handleOrderRequest add 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "orderHash": "0xOrderHash",
      "pair": "ZRX-WETH",
    },
  ],
]
`;

exports[`handleOrderRequest cancel 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "cancel",
      "orderHash": "0xOrderHash",
      "pair": "ZRX-WETH",
    },
  ],
]
`;

exports[`handleOrderRequest invalid requests 1`] = `
Array [
  Array [
    "{\\"status\\":\\"invalid request\\",\\"channel\\":\\"orders\\",\\"method\\":\\"\\",\\"orderHash\\":\\"\\",\\"pair\\":\\"\\"}",
  ],
  Array [
    "{\\"status\\":\\"invalid request\\",\\"channel\\":\\"orders\\",\\"method\\":\\"test\\",\\"orderHash\\":\\"\\",\\"pair\\":\\"\\"}",
  ],
  Array [
    "{\\"status\\":\\"invalid request\\",\\"channel\\":\\"orders\\",\\"method\\":\\"add\\",\\"orderHash\\":\\"\\",\\"pair\\":\\"\\"}",
  ],
  Array [
    "{\\"status\\":\\"invalid request\\",\\"channel\\":\\"orders\\",\\"method\\":\\"add\\",\\"orderHash\\":\\"\\",\\"pair\\":\\"test\\"}",
  ],
  Array [
    "{\\"status\\":\\"invalid request\\",\\"channel\\":\\"orders\\",\\"method\\":\\"add\\",\\"orderHash\\":\\"\\",\\"pair\\":\\"ZRX-WETH\\"}",
  ],
  Array [
    "{\\"status\\":\\"service not available\\",\\"channel\\":\\"orders\\",\\"method\\":\\"add\\",\\"orderHash\\":\\"0xOrderHash\\",\\"pair\\":\\"ZRX-WETH\\"}",
  ],
]
`;

exports[`handleRelayerMessage invalid requests 1`] = `
Array [
  Array [
    "{\\"status\\":\\"invalid request\\",\\"channel\\":\\"\\",\\"method\\":\\"\\"}",
  ],
  Array [
    "{\\"status\\":\\"invalid request\\",\\"channel\\":\\"\\",\\"method\\":\\"method\\"}",
  ],
  Array [
    "{\\"status\\":\\"invalid request\\",\\"channel\\":\\"test\\",\\"method\\":\\"method\\"}",
  ],
  Array [
    "{\\"status\\":\\"invalid request\\",\\"channel\\":\\"orders\\",\\"method\\":\\"\\"}",
  ],
]
`;

exports[`handleRelayerMessage orders 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "method",
    },
  ],
]
`;

exports[`handleUserOrder 1`] = `
Array [
  Array [
    "{\\"method\\":\\"type\\",\\"channel\\":\\"orders\\",\\"status\\":\\"ok\\",\\"userOrder\\":{\\"test\\":\\"liveOrder\\",\\"type\\":\\"type\\",\\"status\\":\\"status\\",\\"updatedBy\\":\\"updatedBy\\"}}",
  ],
]
`;
